# CppCalculatorr

project/: CMakeLists.txt  funcs.cpp  funcs.h  main.cpp  tests.cpp
